# distributed-computing

./: .gitignore  README.md  main.c
pa1/: CMakeLists.txt  README.md  banking.c  c.c  c.h  helper.h  io.c  io.h  ipc.c  k.c  k.h  lamport.c  logging.c  logging.h  main.c  pa23.c
pa2/: CMakeLists.txt  c.c  c.h  helper.h  io.c  io.h  ipc.c  k.c  logging.c  logging.h  pa23.c  pa2345.h
